re PR tree-optimization/43771 (ICE on valid when compiling ParMetis with gcc 4.5.0 and -O3)

PR tree-optimization/43771
	* tree-vect-analyze.c (vect_supported_load_permutation_p): Check
	that load permutation doesn't have gaps.

From-SVN: r158504